--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('default-keystore.keystore')
+            storePassword '123456'
+            keyAlias 'key-alias'
+            keyPassword '123456'
+        }
     }
     buildTypes {
         debug {
