--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "appcenter": "3.0.2",
+    "appcenter-analytics": "3.0.2",
+    "appcenter-crashes": "3.0.2",
     "firebase": "^7.14.3",
     "formik": "^2.1.4",
     "lottie-react-native": "^3.3.2",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-code-push": "^6.2.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.8.0",
