--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,10 +152,12 @@ android {
             keyPassword 'android'
         }
         release {
-            storeFile file('default-keystore.keystore')
-            storePassword '123456'
-            keyAlias 'key-alias'
-            keyPassword '123456'
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            }
         }
     }
     buildTypes {
