--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-navigation-stack": "^2.5.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.5.5",
     "yup": "^0.28.5"
@@ -39,6 +40,7 @@
     "@babel/runtime": "^7.9.6",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^26.0.1",
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.0.0",
     "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.59.0",
