--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "axios": "^0.19.2",
     "firebase": "^7.14.3",
     "formik": "^2.1.4",
+    "intl": "^1.2.5",
     "lottie-react-native": "^3.3.2",
     "moment": "^2.26.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-calendar-picker": "^6.1.4",
     "react-native-code-push": "^6.2.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-indicators": "^0.17.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-make": "^1.0.1",
+    "react-native-material-dropdown": "https://github.com/noway/react-native-material-dropdown",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.3",
     "react-native-screens": "^2.8.0",
