Payment and submit ticket

--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-native-calendar-picker": "^6.1.4",
     "react-native-code-push": "^6.2.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-google-maps-directions": "^2.1.1",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-make": "^1.0.1",
+    "react-native-maps": "0.27.1",
     "react-native-material-dropdown": "https://github.com/noway/react-native-material-dropdown",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.3",
