--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
   package="com.dimo">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
     <application
       android:name=".MainApplication"
@@ -22,6 +26,15 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <!-- google map -->
+         <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyB8-7LsS9iZFzQCdvKMBj8bmjz2JOE_57g"/>
+        <!-- end google map -->
+      <uses-library
+      android:name="org.apache.http.legacy"
+      android:required="false" />
+
     </application>
 
 </manifest>
