--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/clipboard": "^1.2.2",
     "@react-native-community/masked-view": "^0.1.10",
     "appcenter": "3.0.2",
     "appcenter-analytics": "3.0.2",
@@ -27,6 +28,7 @@
     "react-native-code-push": "^6.2.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-google-maps-directions": "^2.1.1",
+    "react-native-htmlview": "^0.15.0",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
@@ -36,6 +38,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.3",
     "react-native-screens": "^2.8.0",
+    "react-native-simple-toast": "^1.1.2",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
